--- a/frontend/src/app/core/components/footer/footer-info/footer-info.component.html
+++ b/frontend/src/app/core/components/footer/footer-info/footer-info.component.html
@@ -9,7 +9,7 @@
     <h3>Company</h3>
     <ul>
       <li><a routerLink="/about">About</a></li>
-      <li><a routerLink="/about">Product</a></li>
+      <li><a routerLink="/product">Product</a></li>
       <li><a routerLink="/contact">Contact</a></li>
       <li><a routerLink="/blog">Blog</a></li>
     </ul>
@@ -17,9 +17,9 @@
   <div class="section">
     <h3>Information</h3>
     <ul>
-      <li><a href="#">Help Center</a></li>
-      <li><a href="#">Payment Methods</a></li>
-      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="/helpcenter">Help Center</a></li>
+      <li><a href="/payment">Payment Methods</a></li>
+      <li><a href="/policy">Privacy Policy</a></li>
     </ul>
   </div>
   <div class="section">
