--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -1,13 +1,7 @@
-<div class="register-form" [@fadeInOut]>
-    <form (ngSubmit)="onSubmit()">
-      <label for="name">Name:</label>
-      <input type="text" formControlName="name" id="name" required>
-      <label for="email">Email:</label>
-      <input type="email" formControlName="email" id="email" required>
-      <label for="password">Password:</label>
-      <input type="password" formControlName="password" id="password" required>
-      <button type="submit">Register</button>
-    </form>
-    <p>Already have an account? <a routerLink="/login">Log in</a></p>
-  </div>
-  
+<app-register-form (onRegisterUser)="registerUser($event)">
+
+</app-register-form>
+
+<p *ngIf="isCreated"> User is successfully created</p>
+
+<p *ngIf="badRequest"> User was not created {{ message }} </p>
