Initial commi for authentication on the frontend part

--- a/frontend/src/app/admin/admin-panel/admin-dashboard/admin-currency/admin-currency.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/admin-currency/admin-currency.component.html
@@ -4,5 +4,7 @@
 </div>
 
 <div class="table-control-container">
-  <router-outlet> </router-outlet>
+  <!-- <router-outlet>   -->
+
+  <!-- </router-outlet> -->
 </div>
