--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -2,6 +2,9 @@
 
 </app-register-form>
 
-<p *ngIf="isCreated"> User is successfully created</p>
 
-<p *ngIf="badRequest"> User was not created {{ message }} </p>
+<p *ngIf="userCreated"> User is created successfully </p>
+
+<p *ngIf="userExist"> User already exist </p>
+
+<p *ngIf="badRequest"> Something went wrong. Please try again! </p>
