--- a/frontend/src/app/admin/admin-panel/admin-dashboard/admin-producer/admin-producer.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/admin-producer/admin-producer.component.html
@@ -4,5 +4,5 @@
 </div>
 
 <div class="table-control-container">
-  <router-outlet> </router-outlet>
+  <!-- <router-outlet> </router-outlet> -->
 </div>
