--- a/frontend/src/app/auth/register/form/form.component.html
+++ b/frontend/src/app/auth/register/form/form.component.html
@@ -1,32 +1,116 @@
 <form [formGroup]="registerForm" (submit)="onSubmit()">
 
   <label for="firstName">FirstName </label>
-  <input type="text" formControlName="firstName" placeholder="FirstName" required>
+  <input type="text" formControlName="firstName" placeholder="FirstName">
+
+  <div *ngIf="
+        registerForm.get('firstName').invalid &&
+        (registerForm.get('firstName').dirty ||
+        registerForm.get('firstName').touched)
+      ">
+    <p *ngIf="registerForm.get('firstName').errors['required']">
+      FirstName is required
+    </p>
+    <p *ngIf="registerForm.get('firstName').errors['pattern']">
+      Provide valid FirstName
+    </p>
+  </div>
   <br>
 
   <label for="lastName">LastName </label>
-  <input type="text" formControlName="lastName" placeholder="LastName" required>
+  <input type="text" formControlName="lastName" placeholder="LastName">
+  <div *ngIf="
+      registerForm.get('lastName').invalid &&
+      (registerForm.get('lastName').dirty ||
+      registerForm.get('lastName').touched)
+  ">
+    <p *ngIf="registerForm.get('lastName').errors['required']">
+      LastName is required
+    </p>
+    <p *ngIf="registerForm.get('lastName').errors['pattern']">
+      Provide valid lastName
+    </p>
+  </div>
   <br>
 
   <label for="email">Email </label>
-  <input type="text" formControlName="email" placeholder="Email" required>
+  <input type="text" formControlName="email" placeholder="Email">
+  <div *ngIf="
+        registerForm.get('email').invalid &&
+        (registerForm.get('email').dirty ||
+          registerForm.get('email').touched)
+      ">
+    <p *ngIf="registerForm.get('email').errors['required']">
+      Email is required
+    </p>
+    <p *ngIf="registerForm.get('email').errors['pattern']">
+      Provide valid email
+    </p>
+  </div>
   <br>
+
 
   <label for="password">Password </label>
-  <input type="password" formControlName="password" placeholder="password" required>
+  <input type="password" formControlName="password" placeholder="password">
+
+  <div *ngIf="
+        registerForm.get('password').invalid &&
+        (registerForm.get('password').dirty ||
+          registerForm.get('password').touched)
+      ">
+
+
+    <p *ngIf="registerForm.get('password').errors['required']">
+      Password is required
+    </p>
+
+    <p *ngIf="registerForm.get('password').errors['minlength']">
+      Password should contain at least 8 characters
+    </p>
+
+    <p *ngIf="registerForm.get('password').errors['pattern']">
+      The password should contain at least one lowercase letter, one uppercase letter, one special character, and one
+      number.
+    </p>
+  </div>
   <br>
 
+
   <label for="country">Country </label>
-  <input type="text" formControlName="country" placeholder="Country" required>
+  <input type="text" formControlName="country" placeholder="Country">
+  <div *ngIf="
+        registerForm.get('country').invalid &&
+        (registerForm.get('country').dirty ||
+        registerForm.get('country').touched)
+      ">
+    <p *ngIf="registerForm.get('country').errors['required']">
+      Country is required
+    </p>
+    <p *ngIf="registerForm.get('country').errors['pattern']">
+      Provide valid text
+    </p>
+  </div>
   <br>
 
   <label for="city">City </label>
-  <input type="text" formControlName="city" placeholder="City" required>
+  <input type="text" formControlName="city" placeholder="City">
+  <div *ngIf="
+        registerForm.get('city').invalid &&
+        (registerForm.get('city').dirty ||
+        registerForm.get('city').touched)
+      ">
+    <p *ngIf="registerForm.get('city').errors['required']">
+      City is required
+    </p>
+    <p *ngIf="registerForm.get('city').errors['pattern']">
+      Provide valid text
+    </p>
+  </div>
   <br>
 
 
   <label for="birthdate">BirthDate </label>
-  <input type="date" formControlName="birthdate" required>
+  <input type="date" formControlName="birthdate">
   <br>
 
 
@@ -35,6 +119,10 @@
   <label for="male">Male </label>
   <input type="radio" name="gender" formControlName="gender" value="female">
   <label for="female">Female </label>
+  <p *ngIf="registerForm.get('gender').errors['required']">
+    Gender is required
+  </p>
+
   <br>
 
 
