Did some changes

--- a/frontend/src/app/admin/admin-panel/admin-dashboard/currency/table/table.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/currency/table/table.component.html
@@ -1,5 +1,3 @@
-<p>table works!</p>
-
 <div>
 
   <table>
@@ -22,5 +20,7 @@
     </tbody>
 
   </table>
+
+  <p *ngIf="emptyData"> No data for this resource </p>
 
 </div>
