Updated the users-access-control component

--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/users-access-control.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/users-access-control.component.html
@@ -1,26 +1,11 @@
-<!-- Roles -->
-<h3> Roles </h3>
-<app-admin-roles>
+<div>
+  <a routerLink="roles">Roles</a>
+  <a routerLink="role-permissions">Role Permission</a>
+  <a routerLink="permissions">Permission</a>
+  <a routerLink="objects"> Objects </a>
+</div>
+<br>
 
-</app-admin-roles>
+<router-outlet>
 
-
-<!-- Role Permissions -->
-<h3> Role Permission </h3>
-<app-admin-role-permissions>
-
-</app-admin-role-permissions>
-
-
-<!-- Permissions -->
-<h3> Permissions </h3>
-<app-admin-permissions>
-
-</app-admin-permissions>
-
-
-<!-- Objects -->
-<h3> Objects </h3>
-<app-admin-objects>
-
-</app-admin-objects>
+</router-outlet>
