Updated roles component, create a http error response to handle http error responses, created permissions, objects, and role-permissions service

--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/roles/list-roles/list-roles.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/roles/list-roles/list-roles.component.html
@@ -14,7 +14,7 @@
 
   <tbody>
 
-    <app-list-roles-row *ngFor="let role of roles" [role]="role">
+    <app-list-roles-row *ngFor="let role of roles" [role]="role" (onDeleteRole)="deleteRole($event)">
 
     </app-list-roles-row>
 
