--- a/frontend/src/app/admin/admin-panel/sidebar/sidebar.component.html
+++ b/frontend/src/app/admin/admin-panel/sidebar/sidebar.component.html
@@ -3,5 +3,6 @@
   <ul>
     <li><a routerLink="/admin">Dashboard</a></li>
     <li><a routerLink="/admin/currency">Currency</a></li>
+    <li><a routerLink="/admin/users-access-control">Users Access Control</a></li>
   </ul>
 </div>
