Updated the add role component, change the permission interface name because of the name permission is used as a keyword, added some methods on the services

--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/role-permissions/add-role-permission/add-role-permission.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/role-permissions/add-role-permission/add-role-permission.component.html
@@ -26,7 +26,7 @@
   </div>
 
 
-  <button type="submit">Add Role Permission</button>
+  <button type="submit" [disabled]="rolePermissionForm.invalid">Add Role Permission</button>
 
 </form>
 
