--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/roles/add-role/add-role.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/roles/add-role/add-role.component.html
@@ -3,7 +3,7 @@
   <label for="Role Name">Role Name: </label>
   <input type="text" formControlName="name" id="name" placeholder="admin, employee, customer">
 
-  <button type="submit">Add Role</button>
+  <button type="submit" [disabled]="roleForm.invalid">Add Role</button>
 
 </form>
 
