--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/objects/edit-object/edit-object.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/objects/edit-object/edit-object.component.html
@@ -2,6 +2,12 @@
 
   <label for="name">Object Name</label>
   <input type="text" formControlName="name" placeholder="Payment, Product, Orders... ">
+  <div *ngIf="objectForm.get('name').invalid && objectForm.get('name').touched">
+    <div *ngIf="objectForm.get('name').errors['required']">Name is required.</div>
+    <div *ngIf="objectForm.get('name').errors['minLength']">Name should have at least 1 character.</div>
+    <div *ngIf="objectForm.get('name').errors['maxLength']">Name should have at most 50 characters.</div>
+    <div *ngIf="objectForm.get('name').errors['pattern']">Name should contain only letters.</div>
+  </div>
   <br>
 
   <button type="submit" [disabled]="objectForm.invalid">Edit Object</button>
