--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/permissions/add-permission/add-permission.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/permissions/add-permission/add-permission.component.html
@@ -10,6 +10,14 @@
     <option value="delete">Delete</option>
   </select>
 
+  <div *ngIf="permissionForm.get('action').invalid && permissionForm.get('action').touched">
+    <div *ngIf="permissionForm.get('action').errors['required']">Action is required.</div>
+    <div *ngIf="permissionForm.get('action').errors['invalidEnum']">Invalid action selected.</div>
+  </div>
+
+  <br>
+
+
 
   <div *ngIf="!emptyObjectData">
 
@@ -17,7 +25,9 @@
     <select name="objectId" formControlName="objectId">
       <option *ngFor="let object of objects" [value]="object.id">{{ object.name | titlecase }} </option>
     </select>
-
+    <div *ngIf="permissionForm.get('objectId').invalid && permissionForm.get('objectId').touched">
+      <div *ngIf="permissionForm.get('objectId').errors['required']">Object is required.</div>
+    </div>
   </div>
 
   <div *ngIf="emptyObjectData">
