--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/roles/add-role/add-role.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/roles/add-role/add-role.component.html
@@ -2,6 +2,14 @@
 
   <label for="Role Name">Role Name: </label>
   <input type="text" formControlName="name" id="name" placeholder="admin, employee, customer">
+  <div *ngIf="roleForm.get('name').invalid && roleForm.get('name').touched">
+    <div *ngIf="roleForm.get('name').errors['required']">Name is required.</div>
+    <div *ngIf="roleForm.get('name').errors['minLength']">Name should have at least 1 character.</div>
+    <div *ngIf="roleForm.get('name').errors['maxLength']">Name should have at most 50 characters.</div>
+    <div *ngIf="roleForm.get('name').errors['pattern']">Name should contain only letters.</div>
+  </div>
+
+  <br>
 
   <button type="submit" [disabled]="roleForm.invalid">Add Role</button>
 
