--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/roles/edit-role/edit-role.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/roles/edit-role/edit-role.component.html
@@ -1,6 +1,14 @@
 <form [formGroup]="roleForm" (ngSubmit)="onSubmit()">
   <label for="name">Role Name:</label>
   <input type="text" id="name" formControlName="name" placeholder="admin, employee, customer">
+  <div *ngIf="roleForm.get('name').invalid && roleForm.get('name').touched">
+    <div *ngIf="roleForm.get('name').errors['required']">Name is required.</div>
+    <div *ngIf="roleForm.get('name').errors['minLength']">Name should have at least 1 character.</div>
+    <div *ngIf="roleForm.get('name').errors['maxLength']">Name should have at most 50 characters.</div>
+    <div *ngIf="roleForm.get('name').errors['pattern']">Name should contain only letters.</div>
+  </div>
+  <br>
+
   <button type="submit" [disabled]="roleForm.invalid">Edit Role</button>
 </form>
 
