Refactored some components and styled them to be more clear

--- a/frontend/src/app/admin/admin-panel/admin-dashboard/currency/table/row/row.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/currency/table/row/row.component.html
@@ -4,11 +4,11 @@
   </td>
 
   <td>
-    {{ currency.code }}
+    {{ currency.code | titlecase }}
   </td>
 
   <td>
-    {{ currency.exchangeRate}}
+    {{ currency.exchangeRate }}
   </td>
 
   <td>
