--- a/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/users-access-control.component.html
+++ b/frontend/src/app/admin/admin-panel/admin-dashboard/users-access-control/users-access-control.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class = "access-control-header">
   <a routerLink="roles">Roles</a>
   <a routerLink="role-permissions">Role Permission</a>
   <a routerLink="permissions">Permission</a>
