Final commit for this pr

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,6 +1,9 @@
-<app-login-form (onLoginUser)="loginUser($event)">
+<div class="container">
+  <app-login-form (onLoginUser)="loginUser($event)">
 
-</app-login-form>
+  </app-login-form>
 
 
-<p *ngIf="loggedInFailed"> Invalid credentials </p>
+  <p *ngIf="loggedInFailed"> Invalid credentials </p>
+
+</div>
