--- a/frontend/src/app/auth/login/form/form.component.html
+++ b/frontend/src/app/auth/login/form/form.component.html
@@ -1,5 +1,4 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-
   <label for="email">Email: </label>
   <input type="text" name="email" placeholder="Email" formControlName="email">
   <div *ngIf="
@@ -23,25 +22,22 @@
         (loginForm.get('password').dirty ||
           loginForm.get('password').touched)
       ">
-
-
     <p *ngIf="loginForm.get('password').errors['required']">
       Password is required
     </p>
-
     <p *ngIf="loginForm.get('password').errors['minlength']">
       Password should contain at least 8 characters
     </p>
-
     <p *ngIf="loginForm.get('password').errors['pattern']">
       The password should contain at least one lowercase letter, one uppercase letter, one special character, and one
       number.
     </p>
   </div>
-
   <br>
 
+  <button [disabled]="loginForm.invalid">Login</button>
 
-  <button>Login</button>
-
+  <div class="not-registered">
+    Not registered yet? <a routerLink="/register">Register</a>
+  </div>
 </form>
