--- a/frontend/src/app/user/product/product.component.html
+++ b/frontend/src/app/user/product/product.component.html
@@ -10,8 +10,8 @@
           <button type="menu" class="left-button-icon">
             <i class="fa fa-search"></i>
           </button>
-          <input type="text" placeholder="Search.." name="search2" />
-          <button type="submit"><i class="fa fa-search"></i></button>
+          <input type="text" placeholder="Search.." name="search2" [(ngModel)]="searchTerm"/>
+          <button type="submit" (click)="onSearchSubmit()"><i class="fa fa-search"></i></button>
         </form>
       </div>
       <div class="latest-search-paragraph">
