fixed some problems

--- a/frontend/src/app/core/components/footer/newsletter/newsletter.component.html
+++ b/frontend/src/app/core/components/footer/newsletter/newsletter.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="newsletter-footer__right">
     <form class="newsletter-footer__form" (ngSubmit)="onSubmit()" [formGroup]="newsletterForm">
-      <input type="email" placeholder="Enter your email address" class="newsletter-footer__input" name="email" [(ngModel)]="email" />
+      <input type="email" placeholder="Enter your email address" class="newsletter-footer__input" name="email" formControlName="email" />
       <div *ngIf="newsletterForm.get('email').invalid && (newsletterForm.get('email').dirty || newsletterForm.get('email').touched)">
         <p *ngIf="newsletterForm.get('email').errors['required']">Email is required</p>
         <p *ngIf="newsletterForm.get('email').errors['pattern']">Provide valid email</p>
