--- a/frontend/src/app/core/components/header/navbar/navbar.component.html
+++ b/frontend/src/app/core/components/header/navbar/navbar.component.html
@@ -13,12 +13,12 @@
       <a routerLink="/contact" class="navbar__link">Contact</a>
     </div>
     <div class="navbar__search">
-      <input type="text" placeholder="Search">
+      <input type="text" placeholder="Search" />
       <button>Search</button>
     </div>
   </div>
   <div class="navbar__right">
-    <a href="#" class="navbar__icon"><i class="fas fa-shopping-cart"></i></a>
-    <a href="#" class="navbar__icon"><i class="fas fa-comment"></i></a>
+    <a class="navbar__icon"><i class="fas fa-shopping-cart"></i></a>
+    <a routerLink="chat" class="navbar__icon"><i class="fas fa-comment"></i></a>
   </div>
 </header>
