payment method implementation and design

--- a/frontend/src/app/user/payment-method/payment-method.component.html
+++ b/frontend/src/app/user/payment-method/payment-method.component.html
@@ -4,54 +4,71 @@
     <div class="card-container">
         <div class="card">
             <h3>Shipping Information</h3>
-            <form>
+            <form [formGroup]="shippingForm">
                 <div class="form-group">
                     <label for="full-name">Full Name</label>
-                    <input type="text" id="full-name" required>
+                    <input type="text" id="full-name" formControlName="fullName" required>
+                    <div *ngIf="shippingForm.get('fullName').invalid && (shippingForm.get('fullName').dirty || shippingForm.get('fullName').touched)"
+                        class="error-message">Full Name is required</div>
                 </div>
                 <div class="form-group">
                     <label for="street-address">Street Address</label>
-                    <input type="text" id="street-address" required>
+                    <input type="text" id="street-address" formControlName="streetAddress" required>
+                    <div *ngIf="shippingForm.get('streetAddress').invalid && (shippingForm.get('streetAddress').dirty || shippingForm.get('streetAddress').touched)"
+                        class="error-message">Street Address is required</div>
                 </div>
                 <div class="form-group">
                     <label for="city">City</label>
-                    <input type="text" id="city" required>
+                    <input type="text" id="city" formControlName="city" required>
+                    <div *ngIf="shippingForm.get('city').invalid && (shippingForm.get('city').dirty || shippingForm.get('city').touched)"
+                        class="error-message">City is required</div>
                 </div>
                 <div class="form-group">
                     <label for="state">State</label>
-                    <input type="text" id="state" required>
+                    <input type="text" id="state" formControlName="state" required>
+                    <div *ngIf="shippingForm.get('state').invalid && (shippingForm.get('state').dirty || shippingForm.get('state').touched)"
+                        class="error-message">State is required</div>
                 </div>
                 <div class="form-group">
                     <label for="zip-code">Zip Code</label>
-                    <input type="text" id="zip-code" required>
+                    <input type="text" id="zip-code" formControlName="zipCode" required>
+                    <div *ngIf="shippingForm.get('zipCode').invalid && (shippingForm.get('zipCode').dirty || shippingForm.get('zipCode').touched)"
+                        class="error-message">Zip Code is required</div>
                 </div>
             </form>
         </div>
 
         <div class="card">
             <h3>Billing Information</h3>
-            <form>
+            <form [formGroup]="billingForm">
                 <div class="form-group">
                     <label for="name-on-card">Name on Card</label>
-                    <input type="text" id="name-on-card" required>
+                    <input type="text" id="name-on-card" formControlName="nameOnCard" required>
+                    <div *ngIf="billingForm.get('nameOnCard').invalid && (billingForm.get('nameOnCard').dirty || billingForm.get('nameOnCard').touched)"
+                        class="error-message">Name on Card is required</div>
                 </div>
                 <div class="form-group">
                     <label for="card-number">Card Number</label>
-                    <input type="text" id="card-number" required>
+                    <input type="text" id="card-number" formControlName="cardNumber" required>
+                    <div *ngIf="billingForm.get('cardNumber').invalid && (billingForm.get('cardNumber').dirty || billingForm.get('cardNumber').touched)"
+                        class="error-message">Card Number is required</div>
                 </div>
                 <div class="form-group">
                     <label for="expiration-date">Expiration Date</label>
-                    <input type="text" id="expiration-date" required>
+                    <input type="date" id="expiration-date" formControlName="expirationDate" required>
+                    <div *ngIf="billingForm.get('expirationDate').invalid && (billingForm.get('expirationDate').dirty || billingForm.get('expirationDate').touched)"
+                        class="error-message">Expiration Date is required</div>
                 </div>
                 <div class="form-group">
                     <label for="security-code">Security Code</label>
-                    <input type="text" id="security-code" required>
+                    <input type="text" id="security-code" formControlName="securityCode" required>
+                    <div *ngIf="billingForm.get('securityCode').invalid && (billingForm.get('securityCode').dirty || billingForm.get('securityCode').touched)"
+                        class="error-message">Security Code is required</div>
                 </div>
             </form>
         </div>
     </div>
-
-
-
-    <button class="place-order-btn">Place Order</button>
+    <div class="place-order-btn-div">
+        <button class="place-order-btn" (click)="placeOrder()">Place Order</button>
+    </div>
 </section>
