--- a/frontend/src/app/user/product/product.component.html
+++ b/frontend/src/app/user/product/product.component.html
@@ -134,7 +134,7 @@
           </div>
         </div>
       </div>
-      <app-pagination></app-pagination>
+      <app-pagination [productsFetched]="productsData"></app-pagination>
     </div>
   </div>
 </div>
