Fixed some problems

--- a/frontend/src/app/core/components/header/topbar/topbar.component.html
+++ b/frontend/src/app/core/components/header/topbar/topbar.component.html
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <a routerLink="/profile" class="account">
+    <a [routerLink]="isAuthenticated ? '/profile' : '/login'" class="account">
       <i class="fas fa-user" style="color: #f36b5a"></i>
       <div *ngIf="isAuthenticated">{{ userName }}</div>
       <div *ngIf="!isAuthenticated">My Account</div>
