--- a/frontend/src/app/user/profile/profile-details/profile-form/profile-form.component.html
+++ b/frontend/src/app/user/profile/profile-details/profile-form/profile-form.component.html
@@ -63,6 +63,9 @@
       <div>
         <button type="submit" [disabled]="profileDetailsForm.invalid">Update Details</button>
       </div>
+      <div>
+        <button type="button" class="sign-out-btn" (click)="onSignOut()">Sign out</button>
+      </div>
     </div>
   </form>
 
